2013-05-17  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* algebra/aggcat.spad.pamphlet (ShallowlyMutableAggregate): New.

2013-05-17  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* algebra/aggcat.spad.pamphlet (FiniteAggregate): More defaults.
	(Aggregate): Remove default implementation of empty?

2013-05-17  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* algebra/aggcat.spad.pamphlet (FiniteAggregate): Add default
	implementation for empty?.

2013-05-17  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* algebra/aggcat.spad.pamphlet (TableAggregate): Now extend
	FiniteAggregate Record(key:Key,entry:Entry).
	* algebra/files.spad.pamphlet (KeyedAccessFile): Remove
	finiteAggregate attribute.
	* algebra/table.spad.pamphlet (HashTable): Likewise.
	(InnerTable): Likewise.
	(Table): Likewise.

2013-05-16  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* algebra/aggcat.spad.pamphlet (KeyedDictionary): Now extend
	IndexedAggregate too.  Give default implementation for elt.
	(TableAggregate): Simplify.

2013-05-16  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* algebra/ffp.spad.pamphlet (FiniteFieldExtensionByPolynomial)
	[tableForDiscreteLogarithm]:  Don't use pretend where checked
	coercion is intended.
	* algebra/pf.spad.pamphlet (InnerPrimeField)
	[tableForDiscreteLogarithm]:  Likewise.

2013-05-16  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* algebra/aggcat.spad.pamphlet (AssociationListAggregate) [assoc]:
	Change return type to instance of Maybe.
	* algebra/list.spad.pamphle (AssociationList): Reflect change.

2013-05-16  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* algebra/sortpak.spad.pamphlet (SortPackage): Have second
	parameter satisfy FiniteAggregate A instead of requiring attribute
	finiteAggregate.
	* algebra/array2.spad.pamphlet (TwoDimensionalArrayCategory): Now
	extends FiniteAggregate.  Remove finiteAggregate attribute.

2013-05-16  Gabriel Dos Reis  <gdr@integrable-solutions.net>
